--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -15,8 +15,7 @@
 @font-face {
   font-family: 'Satoshi';
   src: url('@/assets/fonts/Satoshi-Medium.woff2') format('woff2'),
-       url('@/assets/fonts/Satoshi-Medium.woff') format('woff'),
-       url('@/assets/fonts/Satoshi-Medium.ttf') format('truetype');
+       url('@/assets/fonts/Satoshi-Medium.woff') format('woff');
        font-weight: 500;
        font-display: swap;
        font-style: normal;
@@ -25,8 +24,7 @@
 @font-face {
   font-family: 'Satoshi';
   src: url('@/assets/fonts/Satoshi-Bold.woff2') format('woff2'),
-       url('@/assets/fonts/Satoshi-Bold.woff') format('woff'),
-       url('@/assets/fonts/Satoshi-Bold.ttf') format('truetype');
+       url('@/assets/fonts/Satoshi-Bold.woff') format('woff');
        font-weight: 700;
        font-display: swap;
        font-style: normal;
