--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Satoshi';
-  src: url('@/assets/fonts/Satoshi-Medium.woff2') format('woff2'),
-       url('@/assets/fonts/Satoshi-Medium.woff') format('woff');
+  src: url('/fonts/Satoshi-Medium.woff2') format('woff2');
        font-weight: 500;
        font-display: swap;
        font-style: normal;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: 'Satoshi';
-  src: url('@/assets/fonts/Satoshi-Bold.woff2') format('woff2'),
-       url('@/assets/fonts/Satoshi-Bold.woff') format('woff');
+  src: url('/fonts/Satoshi-Bold.woff2') format('woff2');
        font-weight: 700;
        font-display: swap;
        font-style: normal;
